actualizacion para el git del negro

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>FIFA®</h1>
+    <h1>FIFA 2024</h1>
     <img src="https://ibero.mx/sites/default/files/prensaymultimedios/logo_fifa_2026_0.png" alt="" width="1000px" height="600px">
 
   </header>
@@ -31,15 +31,11 @@
         Gianni Infantino
         <br>
         <hr>
-      
-        "Es el momento en el que tres países y todo un continente proclaman al unísono: nos unimos en una sola voz para dar la bienvenida al planeta y organizar la Copa Mundial de la FIFA más grande, espectacular e inclusiva de todos los tiempos", señaló Infantino.
-
-        Además de esto se supo que como parte del lanzamiento del logo este jueves las 16 sedes tendrán eventos donde cada una mostrará la adaptación del logo, esto de acuerdo a su ubicación geográfica. Pues esta fue la finalidad de la iniciativa, que cada ciudad tenga la oportunidad de plasmar las características que la hacen única sobre el logo que fue presentado la pasada jornada.
-        
-        La Copa del Mundo 2026 será la primera en reunir 48 selecciones y no así 32 como se iba haciendo hasta ahora. Se llevará a cabo entre junio y julio en 16 diferentes ciudades de los tres países de América del Norte.</p>
+      Messi es el mejor jugador del mundo
+        </p>
         <hr>
         <img src="2.png" alt="" width="1400px">
-        <section class="ff-pt-48 ff-pt-md-96"><div class="container ff-pb-48 ff-pb-md-96"><div class="row mt-3"><div id="Qué-Hacemos" class="col-12 col-lg-3"><div class="ff-pb-24 ff-pb-lg-0 ff-pr-16 fc-topic-segment_container__5Hbi0"><div class="ff-mb-0 fc-topic-segment_topicTitle__n51tG"><h2 class=" ">QUE HACEMOS</h2></div></div></div><div class="col-lg-6"><div><div class="d-flex flex-column"><div><div class="rich-text-module_richTextContainer__Gv1sa ff-rich-text-new_richTextContainer__6yvX4"><div data-slate-editor="true" data-slate-node="value" contenteditable="false" zindex="-1" style="position: relative; outline: none; white-space: pre-wrap; overflow-wrap: break-word;"><div class="ff-text-blue-cinema"><h2 class="rich-text-module_h2__0Q-B7" data-slate-node="element"><span data-slate-node="text"><span contenteditable="false" data-slate-leaf="true"><span data-slate-string="true">La FIFA desempeña un papel fundamental en la sociedad y, por lo tanto, la adhesión a los principios de buena gobernanza es fundamental para la misión social más amplia de la FIFA.</span></span></span></h2></div><div class="ff-text-grey-slate"> <h3><p class="rich-text-module_p__GUhqx" data-slate-node="element"><span data-slate-node="text"><span contenteditable="false" data-slate-leaf="true"><span data-slate-string="true">La FIFA apoya a sus 211 asociaciones miembro financiera y logísticamente a través de varios programas. Como representantes de la FIFA en sus países, éstas tienen la obligación de respetar los estatutos, objetivos e ideales del organismo rector del fútbol, así como también promover y gestionar nuestro deporte en consecuencia.</h3>
+        <section class="ff-pt-48 ff-pt-md-96"><div class="container ff-pb-48 ff-pb-md-96"><div class="row mt-3"><div id="Qué-Hacemos" class="col-12 col-lg-3"><div class="ff-pb-24 ff-pb-lg-0 ff-pr-16 fc-topic-segment_container__5Hbi0"><div class="ff-mb-0 fc-topic-segment_topicTitle__n51tG"><h2 class=" ">QUE HACEMOS</h2></div></div></div><div class="col-lg-6"><div><div class="d-flex flex-column"><div><div class="rich-text-module_richTextContainer__Gv1sa ff-rich-text-new_richTextContainer__6yvX4"><div data-slate-editor="true" data-slate-node="value" contenteditable="false" zindex="-1" style="position: relative; outline: none; white-space: pre-wrap; overflow-wrap: break-word;"><div class="ff-text-blue-cinema"><h2 class="rich-text-module_h2__0Q-B7" data-slate-node="element"><span data-slate-node="text"><span contenteditable="false" data-slate-leaf="true"><span data-slate-string="true">Organiza los mundiales </span></span></span></h2></div><div class="ff-text-grey-slate"> <h3><p class="rich-text-module_p__GUhqx" data-slate-node="element"><span data-slate-node="text"><span contenteditable="false" data-slate-leaf="true"><span data-slate-string="true">La FIFA apoya a sus 211 asociaciones miembro financiera y logísticamente a través de varios programas. Como representantes de la FIFA en sus países, éstas tienen la obligación de respetar los estatutos, objetivos e ideales del organismo rector del fútbol, así como también promover y gestionar nuestro deporte en consecuencia.</h3>
 
         </span></span></span></p></div></div></div></div></div></div></div></div></div></section>
     </section>
